--- a/package.json
+++ b/package.json
@@ -6,13 +6,9 @@
     "tsc": "tsc -p tsconfig.json",
     "tsc:w": "tsc -p tsconfig.json -w",
     "clean": "rm -rf app/**.js && rm -rf config/**.js && rm -rf index.js",
-    "build": "npm run tsc && cross-env easywebpack build prod",
-    "build:dev": "npm run tsc && cross-env easywebpack build dev",
-    "build:test": "npm run tsc && cross-env easywebpack build test",
-    "build:prod": "npm run tsc && cross-env easywebpack build prod",
-    "dev": "npm run tsc:w & node index.js",
-    "start": "cross-env NODE_ENV=production EGG_SERVER_ENV=prod node index.js",
-    "start:test": "cross-env EGG_SERVER_ENV=test node index.js",
+    "build": "npm run tsc && easy build prod",
+    "dev": "npm run tsc:w & egg-bin dev",
+    "start": "egg-scripts start",
     "lint": "tslint --project .",
     "fix": "tslint --project . --fix"
   },
@@ -20,8 +16,10 @@
     "axios": "^0.17.1",
     "cross-env": "^5.0.0",
     "egg": "^2.1.0",
+    "egg-bin": "^4.3.7",
     "egg-cors": "^2.0.0",
     "egg-logger": "^1.5.0",
+    "egg-scripts": "^2.5.1",
     "egg-validate": "^1.0.0",
     "egg-view-vue-ssr": "^3.0.5",
     "element-ui": "^2.0.8",
@@ -37,15 +35,12 @@
     "vue-hot-reload-api": "^2.1.0",
     "vue-material-input": "^1.2.0",
     "vue-router": "^3.0.1",
-    "vue-server-renderer": "^2.5.3",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "autod-egg": "^1.0.0",
     "autoprefixer": "^7.1.4",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
@@ -53,28 +48,21 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-env": "^1.6.0",
     "cz-conventional-changelog": "^2.1.0",
-    "directory-named-webpack-plugin": "^2.2.3",
-    "easywebpack-cli": "^3.6.0",
-    "easywebpack-vue": "^3.6.0",
+    "easywebpack-cli": "^3.9.0",
+    "easywebpack-vue": "^4.0.0",
     "egg-logview": "^1.0.0",
-    "egg-webpack": "^3.2.8",
+    "egg-webpack": "^4.0.0",
     "egg-webpack-vue": "^2.0.0",
     "ip": "^1.1.5",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.6",
-    "progress-bar-webpack-plugin": "^1.10.0",
     "sass-loader": "^6.0.6",
-    "service-worker-precache-webpack-plugin": "^0.0.1",
-    "ts-loader": "^3.3.1",
+    "ts-loader": "^4.0.0",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.6.2",
-    "uglifyjs-webpack-plugin": "^1.1.2",
-    "vconsole": "^3.0.0",
-    "vue-template-compiler": "^2.4.4",
-    "webpack-manifest-resource-plugin": "^2.0.2"
+    "vconsole": "^3.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
