--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "egg-typescript-element-kit",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "基于 egg + typescript + element + webpack 服务端渲染同构工程骨架项目",
   "scripts": {
     "tsc": "tsc -p tsconfig.json",
@@ -10,7 +10,10 @@
     "dev": "npm run tsc:w & egg-bin dev",
     "start": "egg-scripts start",
     "lint": "tslint --project .",
-    "fix": "tslint --project . --fix"
+    "fix": "tslint --project . --fix",
+    "autod": "egg-bin autod",
+    "cov": "egg-bin cov",
+    "test": "npm run lint && egg-bin test"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -56,9 +59,8 @@
     "ip": "^1.1.5",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
     "ts-loader": "^4.0.0",
+    "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.6.2",
