--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,7 @@ logs
 app/**/*.js
 config/**/*.js
 index.js
-config/buildConfig.json
 config/manifest.json
-config/manifest-dll.json
 app/view/*
 !app/view/layout.html
 !app/view/README.md
@@ -26,3 +24,4 @@ app/view/*
 package-lock.json
 yarn.lock
 *.log
+coverage
