--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "egg-webpack-vue": "^2.0.0",
     "imagemin-webpack-plugin": "^2.1.0",
     "ip": "^1.1.5",
+    "json-typescript-mapper": "^1.1.3",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "ts-loader": "^4.0.0",
