--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "ii": "npm install --registry https://registry.npm.taobao.org"
     },
     "dependencies": {
+        "@hubcarl/json-typescript-mapper": "^1.1.4",
         "axios": "^0.17.1",
         "cross-env": "^5.0.0",
         "egg": "^2.1.0",
@@ -30,12 +31,12 @@
         "element-ui": "^2.0.8",
         "extend": "~3.0.0",
         "font-awesome": "^4.7.0",
-        "@hubcarl/json-typescript-mapper": "^1.1.4",
         "lodash": "^4.17.4",
         "lodash-id": "^0.14.0",
         "lowdb": "^1.0.0",
         "mockjs": "^1.0.1-beta3",
         "moment": "^2.17.1",
+        "shortid": "^2.2.8",
         "showdown": "^1.8.6",
         "simplemde": "^1.11.2",
         "vue": "^2.5.0",
