--- a/package.json
+++ b/package.json
@@ -1,92 +1,94 @@
 {
-    "name": "egg-typescript-element-kit",
-    "version": "1.1.0",
-    "description": "基于 egg + typescript + element + webpack 服务端渲染同构工程骨架项目",
-    "scripts": {
-        "tsc": "tsc -p tsconfig.json",
-        "tsc:w": "tsc -p tsconfig.json -w",
-        "clean": "rm -rf app/**.js && rm -rf config/**.js && rm -rf index.js",
-        "build": "npm run tsc && easy build prod",
-        "dev": "npm run tsc:w & egg-bin dev",
-        "start": "egg-scripts start",
-        "lint": "tslint --project .",
-        "fix": "tslint --project . --fix",
-        "debug": "egg-bin debug",
-        "autod": "egg-bin autod",
-        "cov": "egg-bin cov",
-        "test": "npm run lint && egg-bin test",
-        "ii": "npm install --registry https://registry.npm.taobao.org"
-    },
-    "dependencies": {
-        "@hubcarl/json-typescript-mapper": "^1.1.4",
-        "axios": "^0.17.1",
-        "cross-env": "^5.0.0",
-        "egg": "^2.1.0",
-        "egg-bin": "^4.3.7",
-        "egg-cors": "^2.0.0",
-        "egg-logger": "^1.5.0",
-        "egg-scripts": "^2.5.1",
-        "egg-validate": "^1.0.0",
-        "egg-view-vue-ssr": "^3.0.5",
-        "element-ui": "^2.0.8",
-        "extend": "~3.0.0",
-        "font-awesome": "^4.7.0",
-        "lodash": "^4.17.4",
-        "lodash-id": "^0.14.0",
-        "lowdb": "^1.0.0",
-        "mockjs": "^1.0.1-beta3",
-        "moment": "^2.17.1",
-        "shortid": "^2.2.8",
-        "showdown": "^1.8.6",
-        "simplemde": "^1.11.2",
-        "vue": "^2.5.0",
-        "vue-hot-reload-api": "^2.1.0",
-        "vue-material-input": "^1.2.0",
-        "vue-router": "^3.0.1",
-        "vuex": "^3.0.1",
-        "vuex-router-sync": "^5.0.0"
-    },
-    "devDependencies": {
-        "autod-egg": "^1.0.0",
-        "autoprefixer": "^7.1.4",
-        "babel-plugin-add-module-exports": "^0.2.1",
-        "babel-plugin-syntax-dynamic-import": "^6.18.0",
-        "babel-plugin-transform-object-assign": "^6.22.0",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-plugin-transform-runtime": "^6.15.0",
-        "babel-preset-env": "^1.6.0",
-        "cz-conventional-changelog": "^2.1.0",
-        "easywebpack-cli": "^3.9.0",
-        "easywebpack-vue": "^4.0.0",
-        "egg-logview": "^1.0.0",
-        "egg-webpack": "^4.0.0",
-        "egg-webpack-vue": "^2.0.0",
-        "imagemin-webpack-plugin": "^2.1.0",
-        "ip": "^1.1.5",
-        "less": "^2.7.3",
-        "less-loader": "^4.0.5",
-        "ts-loader": "^4.0.0",
-        "ts-node": "^5.0.1",
-        "tslint": "^5.9.1",
-        "tslint-loader": "^3.5.3",
-        "typescript": "^2.6.2"
-    },
-    "engines": {
-        "node": ">=8.0.0"
-    },
-    "ci": {
-        "version": "8, 9"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/hubcarl/egg-typescript-element-kit.git"
-    },
-    "author": "hubcarl@126.com",
-    "license": "MIT",
-    "homepage": "https://github.com/hubcarl/egg-typescript-element-kit",
-    "config": {
-        "commitizen": {
-            "path": "./node_modules/cz-conventional-changelog"
-        }
+  "name": "egg-typescript-element-kit",
+  "version": "2.0.0",
+  "description": "基于 egg + typescript + element + webpack 服务端渲染同构工程骨架项目",
+  "scripts": {
+    "tsc": "tsc -p tsconfig.json",
+    "build": "npm run tsc && easy build prod",
+    "dev": "egg-bin dev -r 'egg-ts-helper/register'",
+    "start": "egg-scripts start",
+    "lint": "tslint --project .",
+    "fix": "tslint --project . --fix",
+    "debug": "egg-bin debug",
+    "autod": "egg-bin autod",
+    "cov": "egg-bin cov",
+    "test": "npm run lint && egg-bin test",
+    "ii": "npm install --registry https://registry.npm.taobao.org"
+  },
+  "dependencies": {
+    "@hubcarl/json-typescript-mapper": "^1.1.4",
+    "axios": "^0.17.1",
+    "cross-env": "^5.0.0",
+    "egg": "^2.1.0",
+    "egg-bin": "^4.3.7",
+    "egg-cors": "^2.0.0",
+    "egg-logger": "^1.5.0",
+    "egg-scripts": "^2.5.1",
+    "egg-validate": "^1.0.0",
+    "egg-view-vue-ssr": "^3.0.5",
+    "element-ui": "^2.0.8",
+    "extend": "~3.0.0",
+    "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
+    "lodash-id": "^0.14.0",
+    "lowdb": "^1.0.0",
+    "mockjs": "^1.0.1-beta3",
+    "moment": "^2.17.1",
+    "shortid": "^2.2.8",
+    "showdown": "^1.8.6",
+    "simplemde": "^1.11.2",
+    "vue": "^2.5.0",
+    "vue-hot-reload-api": "^2.1.0",
+    "vue-material-input": "^1.2.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
+  },
+  "devDependencies": {
+    "autod-egg": "^1.0.0",
+    "autoprefixer": "^7.1.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-env": "^1.6.0",
+    "cz-conventional-changelog": "^2.1.0",
+    "easywebpack-cli": "^3.9.0",
+    "easywebpack-vue": "^4.0.0",
+    "egg-logview": "^1.0.0",
+    "egg-ts-helper": "^1.9.2",
+    "egg-webpack": "^4.0.0",
+    "egg-webpack-vue": "^2.0.0",
+    "imagemin-webpack-plugin": "^2.1.0",
+    "ip": "^1.1.5",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "ts-loader": "^4.0.0",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^2.6.2"
+  },
+  "egg": {
+    "typescript": true
+  },
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "ci": {
+    "version": "8, 9"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hubcarl/egg-typescript-element-kit.git"
+  },
+  "author": "hubcarl@126.com",
+  "license": "MIT",
+  "homepage": "https://github.com/hubcarl/egg-typescript-element-kit",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
     }
+  }
 }
